# DuckyLauncher-MC

./: Cargo.toml  README.md
.github/workflows/: build-rust-exe.yml  release.yml
core/: Cargo.toml
core/src/: auth.rs  instance.rs  lib.rs  minecraft.rs  modrinth.rs  paths.rs  server.rs
core/src/loaders/: fabric.rs  forge.rs  quilt.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: index.html  main.js  style.css
