[package]
name = "launcher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
sha1 = "0.10"
sha2 = "0.10"
zip = "0.6"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
